--- a/gb/24/1/17/n14160255.md
+++ b/gb/24/1/17/n14160255.md
@@ -6,45 +6,39 @@
 <hr>
 <p>【大纪元2024年01月17日讯】（大纪元记者袁世钢台湾高雄报导）台法务部行政执行署日前启动第四波全国“强力执行滞欠酒毒驾罚锾案件专案”，针对酒毒驾、拒绝酒测、累犯等严重违规案件优先执行。台湾高雄一名无照酒驾的黄姓男子，遭裁罚36万元却拒不缴纳，高雄执行分署遂扣押他每月薪资三分之一，年终奖金数额不论多寡也全数扣押。</p>
 <p>高雄分署指出，凤山区一名黄姓男子2023年5月在大寮区大寮路酒后驾车，遭警方拦截酒测，他不仅是第二度无照驾驶被查获，更拒绝接受酒测，遭警方依违反《道路交通管理处罚条例》第35条、第67条规定，重罚36万元，且终身不得考领驾驶执照、公布姓名照片。</p>
-<figure id="attachment_14160256" aria-describedby="caption-attachment-14160256" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14160256-659563.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14160256" src="https://i.epochtimes.com/assets/uploads/2024/01/id14160256-659563-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14160256" class="wp-caption-text">行政执行署高雄分署扣押黄姓义务人薪资与年终奖金的执行命令。（行政执行署高雄分署提供）</figcaption></figure>
+<figure id="attachment_14160256" aria-describedby="caption-attachment-14160256" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14160256-659563.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14160256" src="https://i.epochtimes.com/assets/uploads/2024/01/id14160256-659563-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14160256" class="wp-caption-text">行政执行署高雄分署扣押黄姓义务人薪资与年终奖金的执行命令。（行政执行署高雄分署提供）</figcaption></figure>
 <p>然而，黄男对罚单不以为意，逾期仍未缴纳，加上其他交通违规罚单累积滞欠37万1,484元，同年9月遭移送强制执行。高雄分署收案后，立刻清查黄男名下所有财产，发现他在大寮区一家金属工厂工作，年薪约56万余元，另有年终奖金（数额依公司业绩而定），遂发文给该公司扣押黄男每月薪资的三分之一（约1万余元）及年终奖金。</p>
 <p>黄男得知后，才惊觉事态严重，向执行官陈情他尚有未成年子女要抚养，且须支付前妻赡养费，盼能够酌减扣薪以维持生活，后悔不应该酒驾。执行官则要求黄男应提出相关扶养证明，若查证属实，可酌减每月分期缴纳5千元，但年终奖金不论数额多寡，确定须全数扣押。</p>
 <p>高雄分署呼吁民众，酒驾上路害人害己，千万不可抱持侥幸心态，认为喝一两杯而已开车没关系，一旦被警察查获酒驾，不仅被裁罚高额罚单，罚单逾期不缴也会立刻被强制执行名下财产，一时的错误换来辛苦一整年的年终奖金只能缴罚单，让自己年关难过，盼民众能共同保护用路人安全。◇</p>
 <p>责任编辑：玉珍</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/11/n13904667.md#1">台年终奖金资讯科技业平均1.84个月夺冠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/13/n13972079.md#1">台2023年终奖金平均1.68个月</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/9/n14112832.md#1">境外洗钱逃税 嘉义分署扣押账户税款全征起</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/9/n14113187.md#1">加拿大欲将扣押的俄罗斯飞机送乌克兰</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/26/n14144184.md#1">大陆女星郑爽被强制执行近亿元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/28/n14145856.md#1">胡海泉等明星名人财产遭强制执行 涉资金上亿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/16/n14159447.md#1">5年内3度酒驾罚不怕 高雄执行分署以2.5万把车卖了</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/16/n14159568.md#1">嘉义女子酒驾罚锾不缴 一再扣款后分期缴纳</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/17/n14618124.md#1">火光中的米穗 卡那卡那富族的贡米祭</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/10/n14613759.md#1">幼儿园家长7成盼装监视器 欠缺明确法规</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/13/n10561691.md#1" target="_blank">林辉：苏联20万“笑话犯”被关背后的荒谬</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/10/23/n4278970.md#1" target="_blank">唐风：加拿大警官看完《转法轮》之后</a></li>
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/20/n11334759.md#1" target="_blank">宋征时：迟浩田披露中共出卖大面积北方领土</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/11/28/n8535217.md#1" target="_blank">年轻秘书长年病号 幸遇法轮大法无药而愈</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/8/n14611777.md#1">为何“终其一生，不过苟且二字”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/15/n14595067.md#1">【古道人生】相貌丑陋的他让表弟冒名相亲 弄假成真</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/6/n14610810.md#1">夫妻之义</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14616068.md#1">台湾故宫博物院百年院庆 推出宋版图书特展</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/9/n14612893.md#1">扰乱中孕育灵感：珍?奥斯汀的写作生活</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/16/n14617673.md#1">【直播】众议院共和党高层举行记者会（10/16）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/16/n14617738.md#1">【直播】众议院民主党领袖举行记者会（10/16）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/16/n14617723.md#1">【佳音时刻】李强访问朝鲜 金正恩态度轻慢</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14616397.md#1">美贸易组织吁禁止向中国出口废旧饮料罐</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14616527.md#1">金正恩送别李强时手插口袋 网民嘲讽中共</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14616680.md#1">中国经济退潮的社会切面：几代人陷困境</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615714.md#1">港星蒋荣发曝与成龙反目内幕 公司纠纷引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14616334.md#1">李亚鹏转战商圈积欠巨债 与海哈金喜官宣离婚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615651.md#1">王祖蓝一原因怕自己明年大限将至 活不过46岁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14617091.md#1">黎明开唱妻女罕现身 发现被偷拍火速离场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14616452.md#1">大陆女星白鹿自曝磕碎牙片 搞笑喊粉丝帮个忙</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/16/n14617294.md#1">2025年欧洲飞行员薪资有多少？比美国多吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14615822.md#1">Z世代挑战坐着发呆 摆脱电子产品干扰</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/16/n14617439.md#1">为什么有人会随手关灯 有人却不会？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14616755.md#1">小狗疼痛时的几个迹象 很容易被人们忽视</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14616625.md#1">你想要快乐吗？ 专家：从保持善良开始</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651306.md#1">【军事情报局】普京拒绝和平 乌军还在红军村</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651372.md#1">【直播】NASA太空人告别太空站并关闭舱门</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651278.md#1">【新闻大家谈】美国家安全战略 把台湾推向高处</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650097.md#1">花滑大奖赛总决赛 华裔天才少女一举夺冠</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649691.md#1">《阿凡达3》官宣中文配音 豪华阵容引期待</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649781.md#1">陈梦晒与黄晓明合照 已签约表哥公司成为艺人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649845.md#1">研究人员找到让你吃泡菜的另一个理由</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646629.md#1">厨房锅具摆放一目了然 轻松下厨不费力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/1/17/n14160255.htm">无照酒驾拒测挨罚36万元不理 年终奖金遭扣押全没了</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/1/17/n14160255.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
